--- a/react/package.json
+++ b/react/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack -d --watch",
     "build": "webpack -p",
-    "server": "webpack -d && webpack-dev-server --content-base src/client/public --history-api-fallback --host 0.0.0.0 --port 3030"
+    "start": "webpack -d && webpack-dev-server --content-base src/client/public --history-api-fallback --host 0.0.0.0 --port 3030"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/maledr5/bootstraps#readme",
   "dependencies": {
+    "ajv": "^6.6.2",
     "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
