--- a/react/package.json
+++ b/react/package.json
@@ -40,7 +40,10 @@
     "react-slick": "^0.14.11",
     "style-loader": "^0.18.2",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack": "^4.28.3",
+    "webpack-dev-server": "^3.1.14"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.2.0"
   }
 }
